FIX: fix github card display + screen size error
Adjsuting the position of the blur and adding 2 function in App inside App.js to display a warning screen if it is too small in height or width

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 
 .footer {
-	z-index: 1000;
+	z-index: 700;
 	height: auto;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .header {
-	z-index: 1000;
+	z-index: 700;
 	position: fixed;
 }
 
